--- a/Components/GridV2.razor
+++ b/Components/GridV2.razor
@@ -18,12 +18,15 @@
       var currentPos = new Position(x, y);
       var isPlayer = Game.Player.Position == currentPos;
       var hasDroppable = Game.Droppables.Any(d => !d.IsCollected && d.Position == currentPos);
+      var isVisited = Game.ShowTrail && Game.VisitedPositions.Contains(currentPos);
 
       var classes = "cell";
       if (isPlayer) classes += " player";
       if (hasDroppable) classes += " droppable";
 
-      <div class="@classes" data-row="@y" data-col="@x"></div>
+      var style = isVisited ? "background-color: grey;" : "";
+
+      <div class="@classes" style="@style" data-row="@y" data-col="@x"></div>
     }
   }
 </div>
