feat: implement Fill up specific game logic
- player use space to fill up the grid as well as picking up the
droppable
- Fill up game is only comleted when user pick up all the droppables AND
leave a clean trails

--- a/Components/GridV2.razor
+++ b/Components/GridV2.razor
@@ -18,7 +18,7 @@
       var currentPos = new Position(x, y);
       var isPlayer = Game.Player.Position == currentPos;
       var hasDroppable = Game.Droppables.Any(d => !d.IsCollected && d.Position == currentPos);
-      var isVisited = Game.ShowTrail && Game.VisitedPositions.Contains(currentPos);
+      var isVisited = Game.VisitedPositions.Contains(currentPos);
 
       var classes = "cell";
       if (isPlayer) classes += " player";
