--- a/Components/GridV3.razor
+++ b/Components/GridV3.razor
@@ -19,7 +19,7 @@
       var isPlayer = Game.Player.Position == currentPos;
       var hasDroppable = Game.Droppables.Any(d => !d.IsCollected && d.Position == currentPos);
       var wasCollected = Game.Droppables.Any(d => d.IsCollected && d.Position == currentPos);
-      var isVisited = Game.ShowTrail && Game.VisitedPositions.Contains(currentPos);
+      var isVisited = Game.VisitedPositions.Contains(currentPos);
 
       var classes = "cell";
       if (isPlayer) classes += " player";
